start web page debug task